[package]
name = "ripcalc"
version = "0.1.0"
authors = ["Ondřej Hošek <ondra.hosek@gmail.com>"]
edition = "2018"

[features]
default = ["console", "num-bigint"]

[dependencies]
console = { version = "0.14", optional = true }
num-bigint = { version = "0.4", optional = true }
once_cell = { version = "1.7" }
regex = { version = "1.4" }
