[package]
name = "libripcalc"
version = "0.1.0"
authors = ["Ondřej Hošek <ondra.hosek@gmail.com>"]
edition = "2018"

[features]
default = ["num-bigint"]

[dependencies]
num-bigint = { version = "0.4", optional = true }
once_cell = { version = "1.17" }
regex = { version = "1.8" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
]
